// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component tests Avatar snapshot test: icon - circle - large 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 35,
          "width": 35,
        },
        {
          "backgroundColor": "#188700",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={14}
      bbWidth={14}
      fill="none"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#ffffff",
            "height": 14,
            "width": 14,
          },
          {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      tintColor="#ffffff"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        color="#ffffff"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          color="#ffffff"
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          color="#ffffff"
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: icon - circle - normal 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        {
          "backgroundColor": "#188700",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={14}
      bbWidth={14}
      fill="none"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#ffffff",
            "height": 14,
            "width": 14,
          },
          {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      tintColor="#ffffff"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        color="#ffffff"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          color="#ffffff"
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          color="#ffffff"
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: icon - circle - xlarge 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 49,
          "width": 49,
        },
        {
          "backgroundColor": "#188700",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={21}
      bbWidth={21}
      fill="none"
      focusable={false}
      height={21}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#ffffff",
            "height": 21,
            "width": 21,
          },
          {
            "flex": 0,
            "height": 21,
            "width": 21,
          },
        ]
      }
      tintColor="#ffffff"
      vbHeight={24}
      vbWidth={24}
      width={21}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        color="#ffffff"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          color="#ffffff"
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          color="#ffffff"
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: icon - square - large 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 35,
          "width": 35,
        },
        {
          "backgroundColor": "#188700",
        },
        false,
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={14}
      bbWidth={14}
      fill="none"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#ffffff",
            "height": 14,
            "width": 14,
          },
          {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      tintColor="#ffffff"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        color="#ffffff"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          color="#ffffff"
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          color="#ffffff"
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: icon - square - normal 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        {
          "backgroundColor": "#188700",
        },
        false,
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={14}
      bbWidth={14}
      fill="none"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#ffffff",
            "height": 14,
            "width": 14,
          },
          {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      tintColor="#ffffff"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        color="#ffffff"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          color="#ffffff"
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          color="#ffffff"
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: icon - square - xlarge 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 49,
          "width": 49,
        },
        {
          "backgroundColor": "#188700",
        },
        false,
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={21}
      bbWidth={21}
      fill="none"
      focusable={false}
      height={21}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#ffffff",
            "height": 21,
            "width": 21,
          },
          {
            "flex": 0,
            "height": 21,
            "width": 21,
          },
        ]
      }
      tintColor="#ffffff"
      vbHeight={24}
      vbWidth={24}
      width={21}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        color="#ffffff"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          color="#ffffff"
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          color="#ffffff"
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: label - circle - large 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 35,
          "width": 35,
        },
        {
          "backgroundColor": "#188700",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#ffffff",
            "fontFamily": "Roboto-Regular",
            "fontSize": 14,
            "textTransform": "uppercase",
          },
          false,
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: label - circle - normal 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        {
          "backgroundColor": "#188700",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#ffffff",
            "fontFamily": "Roboto-Regular",
            "fontSize": 14,
            "textTransform": "uppercase",
          },
          false,
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: label - circle - xlarge 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 49,
          "width": 49,
        },
        {
          "backgroundColor": "#188700",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#ffffff",
            "fontFamily": "Roboto-Regular",
            "fontSize": 14,
            "textTransform": "uppercase",
          },
          {
            "fontSize": 21,
          },
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: label - square - large 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 35,
          "width": 35,
        },
        {
          "backgroundColor": "#188700",
        },
        false,
        undefined,
      ]
    }
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#ffffff",
            "fontFamily": "Roboto-Regular",
            "fontSize": 14,
            "textTransform": "uppercase",
          },
          false,
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: label - square - normal 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        {
          "backgroundColor": "#188700",
        },
        false,
        undefined,
      ]
    }
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#ffffff",
            "fontFamily": "Roboto-Regular",
            "fontSize": 14,
            "textTransform": "uppercase",
          },
          false,
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests Avatar snapshot test: label - square - xlarge 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#188700",
          "borderColor": "#dbdada",
          "borderRadius": 7,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 49,
          "width": 49,
        },
        {
          "backgroundColor": "#188700",
        },
        false,
        undefined,
      ]
    }
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#ffffff",
            "fontFamily": "Roboto-Regular",
            "fontSize": 14,
            "textTransform": "uppercase",
          },
          {
            "fontSize": 21,
          },
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;
